refactor: turn AuthScheme into an interface
use JDK map instead of MultiValueMap

add comment about unproxying